add the code for extension

--- a/yt.html
+++ b/yt.html
@@ -1,8 +1,22 @@
 <html>
+<meta charset="UTF-8">
+
+<head>
+    <title>X to YouTube</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="scripts/x2yt.js"></script>
+</head>
 
 <body>
-    <h1>X to YouTube</h1>
-    <script src="scripts/x2yt.js"></script>
+    <br>
+    <h1>📺 X to YouTube</h1>
+    <a href="https://x.com/tropianhs" target="_blank">by Antonio</a>
+    <br>
+    <h2>Find your favorite X creator on YouTube with one-click</h2>
+    <br>
+    <br>
+    <h2>The extension makes it super-easy to go from reading a tweet to watch its related YouTube channel.</h2>
+    <h2>Scroll your feed, find the 📺 and click on it to reach your friends' YouTube.</h2>
 </body>
 
 </html>
